<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="brand">Brand</string>
    <string name="mrp">Mrp</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="post">post</string>
    <string name="retailer_id">Retailer ID</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="enterprise_name">Enterprise Name</string>
    <string name="proprieter">Proprieter</string>
    <string name="aadhar_no">Aadhar Number</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="address">Address</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="shop_act_license">shop Act License</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="sign_up">Sign Up</string>
    <string name="personal_info">Personal Information</string>




</resources>
