<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/user_id_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_id"
        />
    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@id/user_id_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/enterprise_name"
        android:hint="@string/enterprise_name"
        android:layout_below="@id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/proprieter"
        android:hint="@string/proprieter"
        android:layout_below="@id/enterprise_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/aadhar_no"
        android:hint="@string/aadhar_no"
        android:layout_below="@id/proprieter"
        android:layout_width="match_parent"
        android:inputType="number"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/mobile_no"
        android:hint="@string/mobile_no"
        android:layout_below="@id/aadhar_no"
        android:layout_width="match_parent"
        android:inputType="phone"
        android:layout_height="wrap_content"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address"
        android:hint="@string/address"
        android:layout_below="@id/mobile_no"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/area"
        android:id="@+id/area"
        android:layout_below="@id/address"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:hint="@string/city"
        android:layout_below="@id/area"
        />
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/state"
       android:hint="@string/state"
       android:layout_below="@id/city"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/state"
        android:hint="Category"
        android:id="@+id/shop_category"/>
    <Button
        android:id="@+id/shop_act"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="shop act"
        android:layout_below="@+id/shop_category"/>
    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="profile"
        android:layout_below="@+id/shop_category"/>
    <Button
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/sign_up"
        android:layout_below="@+id/shop_category"/>

</RelativeLayout>
</ScrollView>