<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.wolfsburgsolutions.myapplication.MainActivity">
<EditText
    android:id="@+id/name"
    android:paddingTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/name"
    />
    <EditText
        android:id="@+id/brand"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/brand"
        />
    <EditText
        android:id="@+id/mrp"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mrp"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/category"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category"
        />
    <EditText
        android:id="@+id/description"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        />
    <EditText
        android:id="@+id/retailer_id"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/retailer_id"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Currently Available?"/>

    <ToggleButton
        android:id="@+id/availability"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="Currently Available?" />
    <EditText
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Price"
        android:inputType="number"/>

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/post" />

    <Button
        android:id="@+id/gotoListButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Show Products" />

</LinearLayout>
